support read-only transaction and spEL